# E2SA-SPADE

./: .env.example  .gitignore  .zenodo.json  AGENTS.md  CITATION.cff  CONTRIBUTING.md  LICENSE  README.md  codemeta.json  environment.yml  pyproject.toml  requirements.txt
.claude/skills/e2sa-add-adapter/: SKILL.md
.claude/skills/e2sa-add-connector/: SKILL.md
.claude/skills/e2sa-add-data-source/: SKILL.md
.claude/skills/e2sa-add-skill/: SKILL.md
.claude/skills/e2sa-audit-adapter/: SKILL.md
configs/: spade_alaska_ice_content.yaml
docs/quickstarts/: data_assembly.md
e2sa/: __init__.py  config.py  orchestrator.py  schema.py  workflow.py
e2sa/agents/: __init__.py
e2sa/catalog/: __init__.py  catalog.py
e2sa/data/: above.py  alaska_thaw_db.py  base.py  calm.py  card_consistency.py  connector.py  ess_dive.py  gtnp.py  indexing.py  metadata_bundle.py  registry.py
e2sa/harmonize/: __init__.py  crs.py  grid.py  rasterize.py  regrid.py  temporal.py  units.py
e2sa/qc/: __init__.py  checks.py  cross_source.py
e2sa/rag/: __init__.py  store.py
e2sa_cli/: __init__.py  __main__.py  cli.py  config.py
e2sa_cli/commands/: acquire.py  catalog.py  init.py  user.py  validate.py
projects/spade/: workflow.yaml
tests/: test_adapters.py  test_capability_index.py  test_card_consistency.py  test_catalog_indexer.py  test_catalog_inspect.py  test_catalog_integration.py  test_connector.py  test_cross_source_consistency.py  test_data_assembly_agent.py  test_earthdata_connector.py  test_ess_dive_adapter.py  test_ess_dive_connector.py  test_harmonize.py  test_indexer_bagit_eml.py  test_indexer_ess_dive.py  test_kanevskiy_adapter.py  test_litreview.py  test_metadata_bundle.py  test_minimal_driver.py  test_pangaea_connector.py  test_paper_search_mcp_backend.py  test_pgc_connector.py  test_phase5b_orchestration.py  test_project_paths.py  test_qc_checks.py  test_seeds.py  test_sloan_2014_barrow_soil_adapter.py  test_smoke.py  test_tsp_north_america_ground_temperature_adapter.py  test_units.py  test_workflow.py  test_wos_ingest.py  test_zenodo_connector.py
tests/fixtures/: above_stdm_sample.csv  alaska_thaw_db_sample.csv  calm_sample.tsv  crossref_response.json  gtnp_sample.tsv  semantic_scholar_response.json  wos_sample.txt
(+73 files in other folders)
