[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "e2sa-spade"
version = "0.2.0"
description = "SPADE: Subsurface Permafrost Autonomous Discovery Engine. Agentic data-preparation and model-simulation-setup agent for coupled surface-subsurface Earth system workflows. Includes a vendored slice of the E2SA framework (schema, catalog, harmonize, qc, data adapters, literature-review agent)."
readme = "README.md"
requires-python = ">=3.12"
license = {text = "BSD-3-Clause"}
authors = [{name = "Jing Tao", email = "jingtao@lbl.gov"}]
keywords = [
    "permafrost",
    "Alaska",
    "active layer thickness",
    "ground ice",
    "thermokarst",
    "DOE BER",
    "FAIR data",
    "agentic workflow",
    "scientific software",
    "Earth system modeling",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: BSD License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Atmospheric Science",
    "Topic :: Scientific/Engineering :: Hydrology",
]

dependencies = [
    "pydantic>=2.5",
    "duckdb>=0.10",
    "lancedb>=0.10",
    "pyarrow>=15",
    "pyyaml>=6",
    "anthropic>=0.30",
    "click>=8.1",
    "requests>=2.31",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "ruff>=0.4",
    "black>=24",
    "mypy>=1.10",
]
geo = [
    "xarray>=2024.1",
    "rioxarray>=0.15",
    "rasterio>=1.3",
    "geopandas>=0.14",
    "shapely>=2.0",
    "pyproj>=3.6",
    "matplotlib>=3.8",
]
mcp = [
    "paper-search-mcp",
]

[project.scripts]
e2sa = "e2sa_cli.cli:cli"

[project.urls]
Repository = "https://github.com/jingtao-lbl/E2SA-SPADE"
Issues = "https://github.com/jingtao-lbl/E2SA-SPADE/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["e2sa*", "e2sa_cli*"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.black]
line-length = 100
target-version = ["py312"]

[tool.mypy]
python_version = "3.12"
strict = false
ignore_missing_imports = true
